tests/fixtures/error/error-address-not-found.js
module.exports = {
	"message": "Endereço não encontrado para essa localidade.",
	"code": "01"
}